updated hello world

--- a/web/hello.html
+++ b/web/hello.html
@@ -4,6 +4,24 @@
 		<title>Page Title</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="initial-scale=1.0">
+        <style>
+            h1{
+                display: block;
+                position: fixed;
+                text-align: center;
+                height: 20vh;
+                font-size: 10vw;
+                font-family: sans-serif;
+                color: #fff;
+                margin: 50vh 50vw;
+                width: 90vw;
+                transform: translate(-50%, -50%);
+            }
+            body{
+                background: #123;
+                margin: 0;
+            }
+        </style>
 	</head>
 
 	<body>
